test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-complex/crd-ready.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: tasks.tekton.dev
