test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-complex/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: tasks-complex
spec:
  admission: true
  background: true
  rules:
  - imageExtractors:
      Task:
      - key: name
        name: steps
        path: /spec/steps/*
        value: image
    match:
      any:
      - resources:
          kinds:
          - tekton.dev/v1beta1/Task
    name: verify-images
    preconditions:
      all:
      - key: '{{request.operation}}'
        operator: NotEquals
        value: DELETE
    verifyImages:
    - image: '*'
      key: "-----BEGIN PUBLIC KEY-----\nMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM\n5/KAQN0/KjHcorm/J5yctVd7iEcnessRQjU917hmKO6JWVGHpDguIyakZA==\n-----END
        PUBLIC KEY----- "
      mutateDigest: true
      required: true
      useCache: true
      verifyDigest: true
      failureAction: Enforce
