test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-complex/chainsaw-step-03-error-1.yaml
apiVersion: tekton.dev/v1beta1
kind: Task
metadata:
  name: example-task-name
