test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-complex/02-create-task.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create-task
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: badtask.yaml
